# ouroboros

./: README.md  band_repo.py  band_rest.py  pyproject.toml  qa.py  repo_tools.py  run_on_repo.py
api/: run.py
docs/: build_data.py  data.json  index.html  index.template.html
public/: index.html
shared/: band_harness.py
specialists/: author.py  qaagent.py
